fixed game over message being too big on phones

--- a/style.css
+++ b/style.css
@@ -63,6 +63,15 @@
   .tooltip:hover .tooltiptext {
     visibility: hidden!important;
   }
+
+  #gameOverMessage{
+    height: 70px!important;
+    align-items: center!important;
+  }
+
+  #startAgainBtn{
+    height: 70px;
+  }
   
 
   .tile {
